--- a/src/main/resources/com/vaadin/myvaadinwebapp/CustomerFormDesign.html
+++ b/src/main/resources/com/vaadin/myvaadinwebapp/CustomerFormDesign.html
@@ -7,7 +7,7 @@
  </head>
  <body>
   <vaadin-form-layout size-full>
-   <vaadin-text-field caption="First name" style-name="dropdown" _id="firstName"></vaadin-text-field>
+   <vaadin-text-field caption="First name" style-name="bold red" _id="firstName"></vaadin-text-field>
    <vaadin-text-field caption="Last name" _id="lastName"></vaadin-text-field>
    <vaadin-text-field caption="Email" _id="email"></vaadin-text-field>
    <vaadin-native-select caption="Status" data-item-type="com.vaadin.myvaadinwebapp.CustomerStatus" _id="status"></vaadin-native-select>
