--- a/src/main/resources/com/vaadin/myvaadinwebapp/CustomerFormDesign.html
+++ b/src/main/resources/com/vaadin/myvaadinwebapp/CustomerFormDesign.html
@@ -2,11 +2,12 @@
 <html>
  <head>
   <meta charset="UTF-8">
-  <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;mytheme&quot;}">
+  <meta name="design-properties" content="{&quot;RULERS_VISIBLE&quot;:true,&quot;GUIDELINES_VISIBLE&quot;:false,&quot;SNAP_TO_OBJECTS&quot;:true,&quot;SNAP_TO_GRID&quot;:true,&quot;SNAPPING_DISTANCE&quot;:10,&quot;GENERATE_GETTERS&quot;:false,&quot;JAVA_SOURCES_ROOT&quot;:&quot;src/main/java&quot;,&quot;THEME&quot;:&quot;mytheme&quot;}">
   <meta name="vaadin-version" content="8.0.5">
  </head>
  <body>
   <vaadin-form-layout size-full>
+   <vaadin-image source="theme://images/img.png" width="150px"></vaadin-image>
    <vaadin-text-field caption="First name" style-name="bold red" _id="firstName"></vaadin-text-field>
    <vaadin-text-field caption="Last name" _id="lastName"></vaadin-text-field>
    <vaadin-text-field caption="Email" _id="email"></vaadin-text-field>
